<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/default_total" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/cardTotal"
        android:textSize="60sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_1"
        android:id="@+id/change1"
        android:onClick="changeCash"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/changeNick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_5"
        android:id="@+id/change5"
        android:layout_alignTop="@+id/change1"
        android:layout_centerHorizontal="true"
        android:onClick="changeCash" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_10"
        android:id="@+id/change10"
        android:layout_alignTop="@+id/change5"
        android:layout_toEndOf="@+id/change5"
        android:onClick="changeCash" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_penn"
        android:id="@+id/changePenn"
        android:layout_below="@+id/change1"
        android:layout_alignStart="@+id/change1"
        android:onClick="changeCash" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_nick"
        android:id="@+id/changeNick"
        android:layout_below="@+id/change5"
        android:layout_centerHorizontal="true"
        android:onClick="changeCash" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_dime"
        android:id="@+id/changeDime"
        android:layout_below="@+id/change5"
        android:layout_toEndOf="@+id/change5"
        android:onClick="changeCash" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/time_default"
        android:id="@+id/timestamp"
        android:layout_below="@+id/cardTotal"
        android:layout_centerHorizontal="true" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/change5"
        android:id="@+id/radioAddSub"
        android:layout_alignStart="@+id/change1"
        android:layout_alignEnd="@+id/change10">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/radioAdd"
        android:checked="true"
        android:onClick="addOrSub" />

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:id="@+id/radioSub"
        android:checked="false"
        android:onClick="addOrSub" />
    </RadioGroup>
</RelativeLayout>
